--- a/publicinfo/person/templates/person/page.html
+++ b/publicinfo/person/templates/person/page.html
@@ -10,47 +10,47 @@
       <div class="col-md-12">
         <ul class="list-group">
           <li class="list-group-item active">
-            <h4 class="list-group-item-heading"><h2 class="text-center">Luis Todd Morelli</h2></h4>
+            <h4 class="list-group-item-heading"><h2 class="text-center">{{full_name}}</h2></h4>
           </li>
           <li class="list-group-item">
             <h4 class="list-group-item-heading">Born</h4>
-            <p class="list-group-item-text">11/11/1976</p>
+            <p class="list-group-item-text">{{date_of_birth}}</p>
           </li>
           <li class="list-group-item">
             <h4 class="list-group-item-heading">Gender</h4>
-            <p class="list-group-item-text">Male</p>
+            <p class="list-group-item-text">{{gender}}</p>
           </li>
           <li class="list-group-item">
             <h4 class="list-group-item-heading">Race</h4>
-            <p class="list-group-item-text">White</p>
+            <p class="list-group-item-text">{{race}}</p>
           </li>
           <li class="list-group-item">
             <h4 class="list-group-item-heading">First Name</h4>
-            <p class="list-group-item-text">Luis</p>
+            <p class="list-group-item-text">{{first_name}}</p>
           </li>
           <li class="list-group-item">
             <h4 class="list-group-item-heading">Last Name</h4>
-            <p class="list-group-item-text">Morelli</p>
+            <p class="list-group-item-text">{{last_name}}</p>
           </li>
           <li class="list-group-item">
             <h4 class="list-group-item-heading">Middle Name</h4>
-            <p class="list-group-item-text">Todd</p>
+            <p class="list-group-item-text">{{middle_name}}</p>
           </li>
           <li class="list-group-item">
             <h4 class="list-group-item-heading">Phone Number</h4>
-            <p class="list-group-item-text">(805) 284-5564</p>
+            <p class="list-group-item-text">{{phone_number}}</p>
           </li>
           <li class="list-group-item">
             <h4 class="list-group-item-heading">Email</h4>
-            <p class="list-group-item-text">-</p>
+            <p class="list-group-item-text">{{email}}</p>
           </li>
           <li class="list-group-item">
             <h4 class="list-group-item-heading">Facebook Account</h4>
-            <p class="list-group-item-text"><a href="https://www.facebook.com/todd.morelli">https://www.facebook.com/todd.morelli</a></p>
+            <p class="list-group-item-text"><a href="{{facebook_link}}">{{facebook_link}}</a></p>
           </li>
           <li class="list-group-item">
             <h4 class="list-group-item-heading">Linkedin Account</h4>
-            <p class="list-group-item-text"><a href="https://www.linkedin.com/in/l-todd-morelli-946a513">https://www.linkedin.com/in/l-todd-morelli-946a513</a></p>
+            <p class="list-group-item-text"><a href="{{linkedin_link}}">{{linkedin_link}}</a></p>
           </li>
         </ul>
       </div>
@@ -77,27 +77,27 @@
       <div class="col-md-12">
         <ul class="list-group">
           <li class="list-group-item active">
-            <h4 class="list-group-item-heading"><h3 class="text-center">642 Vintage Reserve Cir Naples FL 34119</h3></h4>
+            <h4 class="list-group-item-heading"><h3 class="text-center">{{full_address}}</h3></h4>
           </li>
           <li class="list-group-item">
             <h4 class="list-group-item-heading">Address</h4>
-            <p class="list-group-item-text">642 Vintage Reserve Cir Apt. B</p>
+            <p class="list-group-item-text">{{address}}</p>
           </li>
           <li class="list-group-item">
             <h4 class="list-group-item-heading">State</h4>
-            <p class="list-group-item-text">Florida</p>
+            <p class="list-group-item-text">{{state}}</p>
           </li>
           <li class="list-group-item">
             <h4 class="list-group-item-heading">City</h4>
-            <p class="list-group-item-text">Naples</p>
+            <p class="list-group-item-text">{{city}}</p>
           </li>
           <li class="list-group-item">
             <h4 class="list-group-item-heading">Zip Code</h4>
-            <p class="list-group-item-text">34119</p>
+            <p class="list-group-item-text">{{zipcode}}</p>
           </li>
           <li class="list-group-item">
             <h4 class="list-group-item-heading">Country</h4>
-            <p class="list-group-item-text">US</p>
+            <p class="list-group-item-text">{{country}}</p>
           </li>
         </ul>
       </div>
