--- a/publicinfo/person/templates/base.html
+++ b/publicinfo/person/templates/base.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>{% block title %}{% endblock %}</title>
+  <meta name="description=" content="{% block description %}{% endblock %}">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <style>
@@ -13,17 +14,8 @@
 </head>
 <body>
   <div class="container">
-    <div class="row" style="margin-top: 10px;">
-      <div class="col-md-12">
-        <div class="panel panel-default">
-          <div class="panel-heading"><h1 class="text-center">Resident Information</h1></div>
-          <div class="panel-body">
-            {% block content %}
-            {% endblock %}
-          </div>
-        </div>
-      </div>
-    </div>
+    {% block content %}
+    {% endblock %}
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Latest compiled and minified JavaScript -->
