--- a/publicinfo/person/templates/person/page_list.html
+++ b/publicinfo/person/templates/person/page_list.html
@@ -2,5 +2,5 @@
 {% block title %}ResidentsInfo.com{% endblock %}
 {% block description %}ResidentsInfo.com{% endblock %}
 {% block content %}
-<h1>ResidentsInfo.com</h1>
+<h1 class="text-center">ResidentsInfo.com</h1>
 {% endblock content %}
