--- a/publicinfo/person/templates/base.html
+++ b/publicinfo/person/templates/base.html
@@ -3,6 +3,7 @@
 <head>
   <title>{% block title %}{% endblock %}</title>
   <meta name="description=" content="{% block description %}{% endblock %}">
+  <meta name="google-site-verification" content="kHpgzEnEXr6jlwEpTOJcAx4JCmUn669WuU_PZfxmcso" />
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <style>
